external dataplane api
